--- a/projectapps/dir/dev/dir-dev-projectapp.yaml
+++ b/projectapps/dir/dev/dir-dev-projectapp.yaml
@@ -8,15 +8,9 @@ spec:
     namespace: argocd
     server: https://kubernetes.default.svc
   project: "dir-dev"
-  sources:
-    - path: "applicationsets/spire-crds/dev"
-      repoURL: "https://github.com/ramizpolic/dir-deploy.git"
-      targetRevision: main
-    - path: "applicationsets/spire/dev"
-      repoURL: "https://github.com/ramizpolic/dir-deploy.git"
-      targetRevision: main
-    - path: "applicationsets/dir/dev"
-      repoURL: "https://github.com/ramizpolic/dir-deploy.git"
-      targetRevision: main
+  source:
+    path: "applicationsets/dir/dev"
+    repoURL: "https://github.com/ramizpolic/dir-deploy.git"
+    targetRevision: main
   syncPolicy:
     automated: {}
