--- a/applicationsets/dir/dev/applicationset.yaml
+++ b/applicationsets/dir/dev/applicationset.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: "dir-dev-appset"
+  name: "multi-component-dev-appset"
 spec:
   syncPolicy:
     preserveResourcesOnDeletion: true
@@ -9,66 +9,67 @@ spec:
     ## Use merge generator to merge the configurations from different sources into a single object
     - merge:
         mergeKeys:
-          - values.selector
-          - values.appName
+          - appName
         generators:
+          ## Application configs
+          - list:
+              elements:
+                - appName: dir
+                  namespace: dir-dev
+                - appName: spire
+                  namespace: spire
+                - appName: spire-crds
+                  namespace: spire-crds
           ## Application Charts
           - git:
               repoURL: "https://github.com/ramizpolic/dir-deploy"
               revision: main
               files:
-                - path: "applications/dir/dev/**/config.json"
+                - path: "applications/dir/dev/config.json"
               values:
-                selector: "{{ path.basename }}"
                 appName: "dir"
           - git:
               repoURL: "https://github.com/ramizpolic/dir-deploy"
               revision: main
               files:
-                - path: "applications/spire/dev/**/config.json"
+                - path: "applications/spire/dev/config.json"
               values:
-                selector: "{{ path.basename }}"
                 appName: "spire"
           - git:
               repoURL: "https://github.com/ramizpolic/dir-deploy"
               revision: main
               files:
-                - path: "applications/spire-crds/dev/**/config.json"
+                - path: "applications/spire-crds/dev/config.json"
               values:
-                selector: "{{ path.basename }}"
                 appName: "spire-crds"
           ## Cluster Configurations
           - git:
               repoURL: "https://github.com/ramizpolic/dir-deploy"
               revision: main
               files:
-                - path: "clusters/dir/dev/**/cluster-config.json"
+                - path: "clusters/dir/dev/cluster-config.json"
               values:
-                selector: "{{ path.basename }}"
                 appName: "dir"
           - git:
               repoURL: "https://github.com/ramizpolic/dir-deploy"
               revision: main
               files:
-                - path: "clusters/dir/dev/**/cluster-config.json"
+                - path: "clusters/dir/dev/cluster-config.json"
               values:
-                selector: "{{ path.basename }}"
                 appName: "spire"
           - git:
               repoURL: "https://github.com/ramizpolic/dir-deploy"
               revision: main
               files:
-                - path: "clusters/dir/dev/**/cluster-config.json"
+                - path: "clusters/dir/dev/cluster-config.json"
               values:
-                selector: "{{ path.basename }}"
                 appName: "spire-crds"
   template:
     metadata:
-      name: "{{ values.selector }}-{{ values.appName }}-dev-argoapp"
+      name: "{{ appName }}-dev-argoapp"
       labels:
-        cloud: "{{ values.selector }}"
         env: "dev"
-        app: "{{ values.appName }}"
+        app: "{{ appName }}"
     spec:
       project: "dir-dev"
       sources:
@@ -78,7 +79,7 @@ spec:
           helm:
             ignoreMissingValueFiles: true
             valueFiles:
-              - "$values/applications/{{ values.appName }}/dev/{{ values.selector }}/values.yaml"
+              - "$values/applications/{{ appName }}/dev/values.yaml"
         - repoURL: "https://github.com/ramizpolic/dir-deploy"
           targetRevision: main
           ref: values
