feat(dir): add public directory deployment
Signed-off-by: Ramiz Polic <rpolic@cisco.com>

--- a/projects/dir/dev/dir-dev.yaml
+++ b/projects/dir/dev/dir-dev.yaml
@@ -13,7 +13,7 @@ spec:
     namespace: '*'
     server: https://127.0.0.1:53943
   - name: '*'
-    namespace: argocd
+    namespace: '*'
     server: https://kubernetes.default.svc
   namespaceResourceWhitelist:
   - group: '*'
