--- a/projects/dir/prod/dir-prod.yaml
+++ b/projects/dir/prod/dir-prod.yaml
@@ -13,7 +13,7 @@ spec:
     namespace: '*'
     server: https://127.0.0.1:53943
   - name: '*'
-    namespace: argocd
+    namespace: '*'
     server: https://kubernetes.default.svc
   namespaceResourceWhitelist:
   - group: '*'
