feat(dir): add public directory deployment
Signed-off-by: Ramiz Polic <rpolic@cisco.com>

--- a/applicationsets/dir/dev/applicationset.yaml
+++ b/applicationsets/dir/dev/applicationset.yaml
@@ -30,7 +30,7 @@ spec:
                 - path: "applications/{{ appName }}/dev/config.json"
   template:
     metadata:
-      name: "{{ appName }}-dev-argoapp"
+      name: "dir-dev-{{ appName }}-argoapp"
       labels:
         env: "dev"
         app: "{{ appName }}"
