feat(dir): add public directory deployment
Signed-off-by: Ramiz Polic <rpolic@cisco.com>

--- a/applicationsets/dir/dev/applicationset.yaml
+++ b/applicationsets/dir/dev/applicationset.yaml
@@ -10,24 +10,23 @@ spec:
         mergeKeys:
           - appName
         generators:
-          - list:
-              elements:
-                - appName: dir
-                  namespace: dir-dev
-                - appName: spire
-                  namespace: spire
-                - appName: spire-crds
-                  namespace: spire-crds
-          - git:
-              repoURL: "https://github.com/ramizpolic/dir-deploy"
-              revision: main
-              files:
-                - path: "clusters/dir/dev/cluster-config.json"
-          - git:
-              repoURL: "https://github.com/ramizpolic/dir-deploy"
-              revision: main
-              files:
-                - path: "applications/{{ appName }}/dev/config.json"
+          - matrix:
+              generators:
+                - list:
+                    elements:
+                      - appName: dir
+                      - appName: spire
+                      - appName: spire-crds
+                - git:
+                    repoURL: "https://github.com/ramizpolic/dir-deploy"
+                    revision: main
+                    files:
+                      - path: "clusters/dir/dev/cluster-config.json"
+                - git:
+                    repoURL: "https://github.com/ramizpolic/dir-deploy"
+                    revision: main
+                    files:
+                      - path: "applications/{{ appName }}/dev/config.json"
   template:
     metadata:
       name: "dir-dev-{{ appName }}-argoapp"
