feat(dir): add public directory deployment
Signed-off-by: Ramiz Polic <rpolic@cisco.com>

--- a/applicationsets/dir/dev/applicationset.yaml
+++ b/applicationsets/dir/dev/applicationset.yaml
@@ -30,6 +30,13 @@ spec:
                     revision: main
                     files:
                       - path: "clusters/dir/dev/cluster-config.json"
+          - matrix:
+              generators:
+                - list:
+                    elements:
+                      - appName: dir
+                      - appName: spire
+                      - appName: spire-crds
                 - git:
                     repoURL: "https://github.com/ramizpolic/dir-deploy"
                     revision: main
