--- a/applications/spire/dev/values.yaml
+++ b/applications/spire/dev/values.yaml
@@ -4,6 +4,10 @@ global:
   spire:
     trustDomain: "example.org"
 
+  tools:
+    kubectl:
+      tag: "v1.28.0"
+
 spire-server:
   federation:
     enabled: true
