feat(dir): add public directory deployment
Signed-off-by: Ramiz Polic <rpolic@cisco.com>

--- a/applications/spire/dev/values.yaml
+++ b/applications/spire/dev/values.yaml
@@ -8,6 +8,12 @@ global:
       kubectl:
         tag: "v1.28.0"
 
+  installAndUpgradeHooks:
+    enabled: false
+
+  deleteHooks:
+    enabled: false
+
 spire-server:
   federation:
     enabled: true
