--- a/projects/dir/appproject.yaml
+++ b/projects/dir/appproject.yaml
@@ -1,25 +1,23 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: dir-dev
+  name: dir
   namespace: argocd
 spec:
-  clusterResourceWhitelist:
-  - group: '*'
-    kind: '*'
-  description: dir dev deployment
+  description: AGNTCY Directory Project
   destinations:
   - name: '*'
     namespace: '*'
-    server: https://127.0.0.1:53943
-  - name: '*'
-    namespace: '*'
     server: https://kubernetes.default.svc
+  clusterResourceWhitelist:
+  - group: '*'
+    kind: '*'
   namespaceResourceWhitelist:
   - group: '*'
     kind: '*'
   sourceRepos:
   - https://github.com/ramizpolic/dir-deploy
   - https://spiffe.github.io/helm-charts-hardened
+  - https://github.com/agntcy
   - ghcr.io
 status: {}
