feat(dir): add public directory deployment
Signed-off-by: Ramiz Polic <rpolic@cisco.com>

--- a/applicationsets/dir/applicationset.yaml
+++ b/applicationsets/dir/applicationset.yaml
@@ -52,20 +52,6 @@ spec:
                     revision: main
                     files:
                       - path: "applications/{{ appName }}/config.json"
-          # Get all federation files - creates one app per file
-          # This is the closest to dynamic loading with pure ArgoCD
-          - matrix:
-              generators:
-                - list:
-                    elements:
-                      - appName: dir
-                - git:
-                    repoURL: "https://github.com/ramizpolic/dir-deploy"
-                    revision: main
-                    files:
-                      - path: "onboarding/federation/*.yaml"
-                    values:
-                      trustDomain: '{{.path.filenameNormalized}}'
   template:
     metadata:
       name: "dir-appset-{{ appName }}"
@@ -83,10 +69,7 @@ spec:
             ignoreMissingValueFiles: true
             valueFiles:
               - "$values/applications/{{ appName }}/values.yaml"
-            values: |
-              {{- if and (eq "dir" .appName) .trustDomain }}
-                apiserver.spire.federation: {{ .trustDomain }}
-              {{- end }}
+              - "$values/applications/{{ appName }}/*.values.yaml"
         - repoURL: "https://github.com/ramizpolic/dir-deploy"
           targetRevision: main
           ref: values
