feat(dir): add public directory deployment
Signed-off-by: Ramiz Polic <rpolic@cisco.com>

--- a/applications/dir/gen.values.yaml
+++ b/applications/dir/gen.values.yaml
@@ -2,8 +2,7 @@
 apiserver:
   spire:
     federation:
-    -
-      trustDomain: dir.agntcy.org
+    - trustDomain: dir.agntcy.org
       bundleEndpointURL: https://spire.directory.agntcy.org
       bundleEndpointProfile:
         type: https_spiffe
@@ -29,8 +28,7 @@ apiserver:
               }
           ]
         }
-    -
-      trustDomain: dir.agntcy.org2
+    - trustDomain: dir.agntcy.org2
       bundleEndpointURL: https://spire.directory.agntcy.org2
       bundleEndpointProfile:
         type: https_spiffe
